@@ -106,4 +106,11 @@ test union {tuple UNION} -body {
 yo
 }
 
+test tupleval {tuple value} -body {
+    exec $testdir/../../dli/durodt << {
+        io.put_line(tuple {a 'du', b 'ro'}.b);
+    }
+} -result {ro
+}
+
 cleanupTests
