@@ -18,6 +18,11 @@ DuroDBMS 0.26
 - Duro D/T: Tuple attributes are now allowed as a target in INSERT, D_INSERT,
   DELETE, I_DELETE, and LOAD.
 
+- If the evaluation of an expression fails Duro D/T no longer retries with
+  a transaction to read operators from the catalog.
+  Replaced Duro_evaluate_retry() and  Duro_expr_type_retry() by Duro_evaluate()
+  and Duro_expr_type().
+
 - Added function Duro_evaluate() which does not start a transaction.
 
 - Database environments are by default opened with the DB_CREATE flag.
